--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-moveable": "^0.30.3",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3"
   },
