--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.1.3",
     "fortawesome": "^0.0.1-security",
@@ -17,7 +17,7 @@
     "react-fontawesome": "^1.7.1",
     "react-moveable": "^0.30.3",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
