--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fortawesome": "^0.0.1-security",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-moveable": "^0.30.3",
