--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.1.3",
     "fortawesome": "^0.0.1-security",
+    "mnemonist": "^0.39.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-color": "^2.19.3",
