--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.2.2",
     "mnemonist": "^0.39.0",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-color": "^2.19.3",
@@ -22,7 +23,7 @@
     "react-fontawesome": "^1.7.1",
     "react-moveable": "^0.50.1",
     "react-redux": "^8.0.4",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
